# pydantic-101

./: README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
data/: sales_records.json
