[tool.poetry]
name = "pydantic-101"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "pydantic_101" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pydantic = { extras = ["email"], version = "^2.3.0" }
blue = "^0.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue . && isort ."
